StatixSystemUI: Add Smart Pixels tile
Single tap enables/disables.
Long press opens Smart Pixels settings.

User is not allowed to enable or disable when
Smart Pixels has been auto-enabled on battery saver.

* misc edits: fix location of left volume panel bool

Change-Id: I535c84a0ca6360e1db351391e9d0fb9095896ee3
Reviewed-on: https://review.statixos.com/c/android_vendor_statix/+/7003
Tested-by: Anay Wadhera <anay1018@gmail.com>
Reviewed-by: Anay Wadhera <anay1018@gmail.com>

--- a/app_override/StatixSystemUI/res/values/strings.xml
+++ b/app_override/StatixSystemUI/res/values/strings.xml
@@ -28,4 +28,8 @@
 
     <!-- Glove Mode Tile -->
     <string name="quick_settings_glove_mode_label">Glove Mode</string>
+
+    <!-- Smart Pixels QS Tile -->
+    <string name="quick_settings_smart_pixels">Smart Pixels</string>
+    <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled Smart Pixels</string>
 </resources>
