--- a/app_override/StatixLauncher/res/values/strings.xml
+++ b/app_override/StatixLauncher/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="msg_minus_one_on_right">When you swipe right from main Home screen</string>
     <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
 
+    <string name="state_loading">Applying\u2026</string>
 </resources>
