--- a/app_override/StatixSystemUI/res/values/strings.xml
+++ b/app_override/StatixSystemUI/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="accessibility_quick_settings_caffeine_off">Caffeine off</string>
     <string name="accessibility_quick_settings_caffeine_on">Caffeine on</string>
 
+    <!-- Glove Mode Tile -->
+    <string name="quick_settings_glove_mode_label">Glove Mode</string>
 </resources>
